# uah_cpe512

./: .gitignore  project.txt
hw1/: hello_world_MPI.cpp  hello_world_MPI_PTH.cpp  hello_world_OMP.cpp  hello_world_PTH.cpp  report.txt
hw2/: CMakeLists.txt  README  add_num_MPI.cpp  add_num_MPI_rv1.cpp  add_num_MPI_rv2.cpp  add_num_MPI_rv3.cpp  report.txt  test.sh
hw3/: info.xls  mm_mult_MPI_sol.cpp  mm_mult_mpi.cpp  mm_mult_serial.cpp  plot.sh  submit.sh
hw4/: mm_mult_pthread.cpp  mm_mult_serial.cpp  submit.sh
hw5/: add_num_omp.c  add_num_omp.cpp  add_num_omp_naive.cpp  mm_mult_pthread.cpp  plot.sh  submit.sh
hw6/: CMakeLists.txt  bmp.cpp  bmp.hpp  display.cpp  display_mpi.cpp  display_mpi_test.sh  display_omp.cpp  display_pthread.cpp  display_serial.cpp  display_serial_test.sh  mandelbrot.cpp  mandelbrot_mpi.cpp  mandelbrot_omp.cpp  mandelbrot_pthread.cpp  mandelbrot_serial.cpp  mandelbrot_serial_test.sh  test_display.sh  test_mandelbrot.sh
lectures/: chapter1.ppt  chapter3.ppt  chapter4.ppt  chapter5.ppt  chapter6.ppt  chapter7.ppt  chapter8.ppt  hw1_background_info.ppt  introduction2.ppt  pthreads-1.ppt
